<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include layout="@layout/include_toolbar"/>
    <LinearLayout android:layout_width="match_parent"
                  android:orientation="horizontal"
                  android:layout_height="@dimen/dp_40">
        <TextView
                android:id="@+id/tvMoveStart"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"
                android:text="@string/desc_move_start"/>
        <TextView
                android:id="@+id/tvMovePause"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"
                android:text="@string/desc_move_pause"/>
        <TextView
                android:id="@+id/tvMoveStop"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"
                android:text="@string/desc_move_stop"/>
    </LinearLayout>
    <include layout="@layout/include_map_view"/>

</LinearLayout>