<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include layout="@layout/include_toolbar"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/tvItemCon"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp_10"
                style="@style/View_H"
                android:text="@string/desc_item_con"/>
        <ImageView
                android:id="@+id/ivItemCon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/strategy_setting"/>
    </LinearLayout>
    <View style="@style/View_H_line"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/tvItemCost"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp_10"
                style="@style/View_H"
                android:text="@string/desc_item_cost"/>
        <ImageView
                android:id="@+id/ivItemCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/strategy_setting"/>
    </LinearLayout>
    <View style="@style/View_H_line"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/tvItemAvoid"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp_10"
                style="@style/View_H"
                android:text="@string/desc_item_avoid"/>
        <ImageView
                android:id="@+id/ivItemAvoid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/strategy_setting"/>
    </LinearLayout>
    <View style="@style/View_H_line"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/tvItemSpeed"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp_10"
                style="@style/View_H"
                android:text="@string/desc_item_speed"/>
        <ImageView
                android:id="@+id/ivItemSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/strategy_setting"/>
    </LinearLayout>
    <View style="@style/View_H_line"/>
</LinearLayout>